# fairlex

./: CLAUDE.md  Makefile  README.md  leximin-comparison.ipynb  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-package.yml  python-publish.yml
docs/: api.rst  conf.py  examples.rst  index.rst
docs/examples/: basic_example.ipynb
examples/: basic_example.py
fairlex/: __init__.py  calibration.py  metrics.py
tests/: __init__.py  test_calibration.py  test_metrics.py
